--- a/css/custom.css
+++ b/css/custom.css
@@ -8,10 +8,26 @@ body {
     font-family: 'Arvo', courier, serif;  
   }
 
+  ul.nav {
+    font-size: 11px;
+  }
+
 .jumbotron {
     text-align: center;
-    /* color: red;*/
-}  
+    background-image: url('../images/Hero+Image.jpg');
+    color: white;
+} 
+
+.jumbotron h1 {
+    margin-top: 0px;
+    margin-bottom: 50px;
+}
+
+.jumbotron p {
+    margin-bottom: 30px;
+    font-weight: 100;
+    padding: 0 50px;
+}
 
 .btn-lg {
     font-size: 36px;
